<resources>
    <string name="app_name">Dice Game</string>
    <string name="result_of_dice_roll">Result of Dice Roll</string>
    <string name="score_this_roll">Score this Roll: </string>
    <string name="roll_the_dice">Roll the Dice</string>
    <string name="start_value">0</string>
    <string name="enable_double">Enable Double</string>
    <string name="enable_triple">Enable Triple</string>
    <string name="score_enhancer"></string>
    <string name="total_score">Score: </string>
    <string name="dice_number_2">Dice Number 2</string>
    <string name="dice_number_3">Dice Number 3</string>
    <string name="dice_number_1">Dice Number 1</string>
    <string name="okay">Okay</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ludicrous_switch">Enable Ludicrous Mode</string>
    <!--Dialog Menu string....-->
    <string name="dialog_settings">Settings</string>
    <string name="dialog_about">About</string>
    <string name="dialog_ludicrous">Ludicrous</string>
    <!--About Dialog Menu strings.... -->
    <string name="about_me_dialog">This was written in all it\'s bad UI
        \nglory by me, Geoff Craig.
        \nAll photos are provided by the Interwebs.
        \n
        \nAny similarities to code living or dead
        \nis purely accidental
        \n
        \nSpecial thanks to our professor Josh Bond</string>
    <string name="about_closing_countdown">This window will close in </string>
    <string name="about_closing_countdown_seconds"> seconds...</string>
    <string name="ludicrous_banner">They see me rolling....</string>
    <string name="ludicrous_dialog_title">Are You Prepared?</string>
    <string name="about_dialog_title">About This Program</string>
    <string name="settings_dialog_title">Settings</string>
    <string name="scoreboard_button">Scoreboard</string>
    <string name="name">Name:</string>
    <string name="scoreboard_placeholder">Scoreboard Placeholder</string>
    <string name="total_dice_rolls">Total Dice Rolls:</string>
    <string name="thanks_for_playing">Thanks for playing,</string>
    <string name="clear_scoreboard">Clear Scoreboard</string>
    <string name="return_to_game">Return to Game</string>
    <string name="help_me">Help Me!</string>
    <string name="what_do_i_do">Welcome!\n\nIf you want to roll some dice enter your name and swipe down.\n\nSee how you rank on the Scoreboard!</string>
    <string name="thank_you">Thank You</string>
</resources>