<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/dialog_settings"
        android:orderInCategory="100"
        android:title="@string/dialog_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_settings"
        android:orderInCategory="100"
        android:title="@string/dialog_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/help_settings"
        android:orderInCategory="100"
        android:title="@string/help_me"
        app:showAsAction="never" />

    <item
        android:id="@+id/ludicrous_settings"
        android:orderInCategory="100"
        android:title="@string/dialog_ludicrous"
        app:showAsAction="never" />

</menu>